syntax = "proto3";

package resultstoresearch.v1;

// Stores errors reading or parsing a file during post-processing.
message FileProcessingErrors {
  // The uid of the File being read or parsed.
  string file_uid = 1;

  // What went wrong.
  repeated FileProcessingError file_processing_errors = 3;
}

// Stores an error reading or parsing a file during post-processing.
message FileProcessingError {
  // The type of error that occurred.
  FileProcessingErrorType type = 1;

  // Error message describing the problem.
  string message = 2;
}

// Errors in file post-processing are categorized using this enum.
enum FileProcessingErrorType {
  // Type unspecified or not listed here.
  FILE_PROCESSING_ERROR_TYPE_UNSPECIFIED = 0;

  // A read error occurred trying to read the file.
  GENERIC_READ_ERROR = 1;

  // There was an error trying to parse the file.
  GENERIC_PARSE_ERROR = 2;

  // File is exceeds size limit.
  FILE_TOO_LARGE = 3;

  // The result of parsing the file exceeded size limit.
  OUTPUT_TOO_LARGE = 4;

  // Read access to the file was denied by file system.
  ACCESS_DENIED = 5;

  // Deadline exceeded trying to read the file.
  DEADLINE_EXCEEDED = 6;

  // File not found.
  NOT_FOUND = 7;

  // File is empty but was expected to have content.
  FILE_EMPTY = 8;
}
